phone nav gap fix need anims tho

--- a/css/style.css
+++ b/css/style.css
@@ -1436,355 +1436,20 @@ and (max-width : 750px){
     background-color: var(--mainPageColor);
     display: block;
     flex-direction: column;
-    height: calc(100dvh - 89px);
+    height: calc(100dvh - 89px - 1em);
     justify-content: space-evenly;
     position: absolute;
     right: 0px;
-    top:  calc(89px);
+    top:  calc(89px - 1em);
     width: 100dvw;
     z-index: 10;
-
-    transform: translateY(-175%);
-    transition: transform .125s ease;
-  }
-
-  /* nav active classes for burger menu animation */
-  .nav-pages.nav-active-1{
-
-    transform: translateY(-150%);
-    transition: transform .125s ease;
-
-  }
-
-  .nav-pages.nav-active-1.nav-active-2{
-
-    transform: translateY(-125%);
-    transition: transform .125s ease;
-
-  }
-
-  .nav-pages.nav-active-1.nav-active-2.nav-active-3{
-
-    transform: translateY(-100%);
-    transition: transform .125s ease;
-
-  }
-
-  .nav-pages.nav-active-1.nav-active-2.nav-active-3.nav-active-4{
-
-    transform: translateY(-75%);
-    transition: transform .125s ease;
-
-  }
-
-  .nav-pages.nav-active-1.nav-active-2.nav-active-3.nav-active-4.nav-active-5{
-
-    transform: translateY(-50%);
-    transition: transform .125s ease;
-
-  }
-
-  .nav-pages.nav-active-1.nav-active-2.nav-active-3.nav-active-4.nav-active-5.nav-active-6{
-
-    transform: translateY(0%);
-    transition: transform .125s ease;
-
-  }
-
-  /* nav active classes for burger menu animation when closing menu with reverse animation */
-  .nav-pages.nav-active-2.nav-active-3.nav-active-4 {
-
-    transform: translateY(-25%);
-    transition: transform .125s ease;
-
-  }
-
-  .nav-pages.nav-active-3.nav-active-4 {
-
-    transform: translateY(-50%);
-    transition: transform .125s ease;
-
-  }
-
-  .nav-pages.nav-active-4 {
-
-    transform: translateY(-75%);
-    transition: transform .125s ease;
-
-  }
-
-
-
-  /* nav text animations for burger menu */
-  /*home, about, team, contact*/
-
-  /*home*/
-  .first{
-
-    opacity: 0;
-    transform: translateY(0%);
-    transition: transform .125s ease opacity .125s ease;
-    transition-delay: .0625s;
-    transition-property: transform;
-
-  }
-
-  /* home text animation for burger menu when opening menu */
-  .nav-pages.nav-active-1 .first{
-
-    opacity: 100;
-    transform: translateY(300%);
-    transition: transform .125s ease opacity .125s ease;
-    transition-delay: .0625s;
-    transition-property: opacity;
-    
-  }
-  .nav-pages.nav-active-1.nav-active-2 .first{
-
-    opacity: 100;
-    transform: translateY(200%);
-    transition: transform .125s ease;
-
-  }
-  .nav-pages.nav-active-1.nav-active-2.nav-active-3 .first{
-
-    opacity: 100;
-    transform: translateY(100%);
-    transition: transform .125s ease;
-
-  }
-
-  .nav-pages.nav-active-1.nav-active-2.nav-active-3.nav-active-4 .first{
-
-    opacity: 100;
-    transform: translateY(0%);
-    transition: transform .125s ease;
-
-  }
-
-  /* home text animation for burger menu when closing menu with reverse animation */
-  .nav-pages.nav-active-2.nav-active-3.nav-active-4 .first{
-    
-    opacity: 100;
-    transform: translateY(100%);
-    transition: transform .125s ease;
-
-  }
-
-  .nav-pages.nav-active-3.nav-active-4 .first {
-
-    opacity: 100;
-    transform: translateY(200%);
-    transition: transform .125s ease;
-  }
-
-  .nav-pages.nav-active-4 .first{
-
-    opacity: 100;
-    transform: translateY(300%);
-    transition: transform .125s ease;
-
-  }
-
-  
-
-  /* about */
-  .second{
-
-    opacity: 0;
-    transform: translateY(0%);
-    transition: transform .125s ease opacity .125s ease;
-
-  }
-
-  /* about text animation for burger menu when opening menu */
-  .nav-pages.nav-active-1 .second{
-
-    opacity: 0;
-    transform: translateY(200%);
-    transition: transform .125s ease;
-
-  }
-
-  .nav-pages.nav-active-1.nav-active-2 .second{
-
-    opacity: 100;
-    transform: translateY(200%);
-    transition: transform .125s ease opacity .0625s ease;
-    transition-delay: .0625s;
-    transition-property: opacity;
-
-  }
-
-  .nav-pages.nav-active-1.nav-active-2.nav-active-3 .second{
-
-    opacity: 100;
-    transform: translateY(100%);
-    transition: transform .125s ease;
-
-  }
-
-  .nav-pages.nav-active-1.nav-active-2.nav-active-3.nav-active-4 .second{
-
-    opacity: 100;
-    transform: translateY(0%);
-    transition: transform .125s ease;
-
-  }
-  
-  /* about text animation for burger menu when closing menu with reverse animation */
-  .nav-pages.nav-active-2.nav-active-3.nav-active-4 .second{
-
-    opacity: 100;
-    transform: translateY(100%);
-    transition: transform .125s ease opacity .125s ease;
-
-  }
-
-  .nav-pages.nav-active-3.nav-active-4 .second {
-
-    opacity: 100;
-    transform: translateY(200%);
-    transition: transform .125s ease;
-
-  }
-
-  .nav-pages.nav-active-4 .second {
-
-    opacity: 0;
-    transform: translateY(200%);
-    transition: transform .0625s ease;
-
-  }
-
-
-  /* team */
-  .third{
-    transform: translateY(0%);
-    opacity: 0;
-    transition: transform .125s ease opacity .125s ease;
-  }
-
-  /* team text animation for burger menu when opening menu */
- .nav-pages.nav-active-1 .third{
-
-    opacity: 0;
-    transform: translateY(100%);
-    transition: transform .125s ease opacity .125s ease;
-
-  }
-  .nav-pages.nav-active-1.nav-active-2 .third{
-
-    opacity: 0;
-    transform: translateY(100%);
-    transition: transform .125s ease;
-
-  }
-  .nav-pages.nav-active-1.nav-active-2.nav-active-3 .third{
-
-    opacity: 100;
-    transform: translateY(100%);
-    transition: transform .125s ease opacity .125s ease;
-    transition-delay: .0625s;
-    transition-property: opacity;
-
-  }
-  .nav-pages.nav-active-1.nav-active-2.nav-active-3.nav-active-4 .third {
-
-    opacity: 100;
-    transform: translateY(0%);
-    transition: transform .125s ease;
-
-  }
-
-  /* team text animation for burger menu when closing menu with reverse animation */
-  .nav-pages.nav-active-2.nav-active-3.nav-active-4 .third{
-
-    opacity: 100;
-    transform: translateY(100%);
-    transition: transform .125s ease;
-
-  }
-  .nav-pages.nav-active-3.nav-active-4 .third {
-
-    opacity: 0;
-    transform: translateY(100%);
-    transition: transform .0625s ease;
-
-  }
-  .nav-pages.nav-active-4 .third{
-
-    opacity: 0;
-    transform: translateY(100%);
-    transition: transform .125s ease;
-
-  }
-
-
-
-  /* contact */
-  .fourth{
-
-    opacity: 0;
-    transform: translateY(0%);
-    transition: transform .125s ease opacity .125s ease;
-
-  }
-
-
-  /* contact text animation for burger menu when opening menu */
-  .nav-pages.nav-active-1 .fourth{
-
-    opacity: 0;
-    transform: translateY(0%);
-    transition: transform .125s ease opacity .125s ease;
-
-  }
-  .nav-pages.nav-active-1.nav-active-2 .fourth{
-
-    opacity: 0;
-    transform: translateY(0%);
-    transition: transform .125s ease;
-
-  }
-  .nav-pages.nav-active-1.nav-active-2.nav-active-3 .fourth{
-
-    opacity: 0;
-    transform: translateY(0%);
-    transition: transform .125s ease;
-
-  }
-  .nav-pages.nav-active-1.nav-active-2.nav-active-3.nav-active-4 .fourth{
-
-    opacity: 100;
-    transform: translateY(0%);
-    transition: transform .125s ease opacity .125s ease;
-    transition-delay: .0625s;
-    transition-property: opacity;
-
-  }
-
-  /* contact text animation for burger menu when closing menu with reverse animation */
-  .nav-pages.nav-active-2.nav-active-3.nav-active-4 .fourth{
-
-    opacity: 0;
-    transform: translateY(0%);
-    transition: transform .125s ease opacity .0625s ease;
-  }
-
-  .nav-pages.nav-active-3.nav-active-4 .fourth {
-
-    opacity: 0;
+    padding-bottom: 1em;
     transform: translateY(0%);
     transition: transform .125s ease;
   }
 
-  .nav-pages.nav-active-4 .fourth{
-
-    opacity: 0;
+  .nav-active{
     transform: translateY(0%);
-    transition: transform .125s ease;
-
   }
 
   
